# corecdtl

./: .gitignore  .npmignore  CMakeLists.txt  LICENSE.md  QUICKSTART.md  README.md  binding.gyp  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
benchmark/: bench.cpool.js  bench.scannerHeader.js  bench.scannerRouteFirst.js  utils.js
benchmark/e2e/: generate-routes.js  headers.js  run.js  scenarios.js  server.corecdtl.js  server.express.js  server.fastify.js
benchmark/e2e/data/: routes.json
example/: client.js  openapi.json  server.api.js  server.js  server.web.js
native/: main.cpp
native/http/core/: http_core.cpp  http_core.h  http_scanner.cpp  http_scanner.h
native/http/cpool/: cpool.cpp  cpool.h
native/http/parser/: asset_meta.cpp  asset_meta.h  asset_parser.cpp  asset_parser.h
native/http/routes/: route.h  route_builder.cpp  route_matching.cpp  route_print.cpp
prebuilds/darwin-arm64/: corecdtl.node
prebuilds/linux-x64/: corecdtl.node
prebuilds/win32-x64/: corecdtl.node
tests/: setup.ts
tests/RFC/: content-length.test.ts  headers.test.ts  limits.test.ts  request-line.test.ts  smuggling.test.ts
tests/helpers/: assertFlag.ts  freshReq.ts  run.ts
tests/security/: content-length.test.ts  headers.test.ts  limits.test.ts
ts/: http.ts  hypernode.ts  index.ts
ts/http/chunker/: ChunkParser.ts  ChunkProgression.ts  FixedChunkedParser.ts  StreamingChunkedParser.ts  UntilEndChunkerParser.ts
ts/http/content/: encoding.ts  parser.ts
ts/http/context/: ApiContext.ts  HttpContext.ts  WebContext.ts
(+6 files in other folders)
